--- a/03-03/03-03.vcxproj
+++ b/03-03/03-03.vcxproj
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>18.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{607cdecc-0985-43a4-8c5a-cd07e1c949df}</ProjectGuid>
+    <ProjectGuid>{17078654-0FE7-4F47-B8A3-429A2349D24F}</ProjectGuid>
     <RootNamespace>Project2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>01-01</ProjectName>
+    <ProjectName>03-03</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -129,6 +129,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="medicine.cpp" />
+    <ClCompile Include="medicineTypes.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="medicine.h" />
+    <ClInclude Include="medicineTypes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
